"Arrangement des Liens interne et monde meilleurs"

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               d’applications et la musique, avec une formation de 2 ans en
               sciences informatiques. Depuis toujours, je suis animé par la
               curiosité pour les nouvelles technologies et leurs possibilités
-              infinies. Mon ambition ? Contribuer à bâtir un monde où la
+              infinies. Mon ambition ? Contribuer à bâtir un monde meilleur où la
               technologie simplifie la vie, tout en favorisant un partage
               d’information décentralisé et équitable.
             </p>
@@ -432,7 +432,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Josuebanza'"
+                onclick="location.href='https://github.com/Josuebanza/ecobop'"
               >
                 Github
               </button>
@@ -469,7 +469,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Josuebanza'"
+                onclick="location.href='https://github.com/Josuebanza/maquette_projet_GreenBite'"
               >
                 Github
               </button>
@@ -502,7 +502,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/Josuebanza'"
+                onclick="location.href='https://github.com/Josuebanza/letecode'"
               >
                 Github
               </button>
@@ -560,7 +560,7 @@
       </nav>
       <p>
         Copyright &#169; 2024 Josué banza. All Rights Reserved. Portfolio de
-        Josué Banza | Créé avec HTML, CSS et JavaScript
+        Josué Banza | Créé avec HTML, CSS et JavaScript <br> designed by Ade-mir and Josué Banza
       </p>
     </footer>
     <script src="script.js"></script>
