J'avais oublié le lien

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         onclick="location.href='./#activites'"
       />
     </section>
-    <section id="activites">
+    <section id="experience">
       <p class="section__text__p1"></p>
       <h1 class="title">Activités</h1>
       <div class="section-container2">
